[gd_scene load_steps=14 format=3 uid="uid://cidd8fo8cymoo"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_rvo1c"]
[ext_resource type="Script" path="res://Player/CameraController.gd" id="3_qrkly"]
[ext_resource type="Script" path="res://Player/MeleeAttackArea.gd" id="3_v1vve"]
[ext_resource type="PackedScene" path="res://Player/CharacterSkin.tscn" id="4_ign62"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5yey4"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_gqx4v"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_3ix22"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s5n07"]

[sub_resource type="SphereMesh" id="SphereMesh_uex0s"]

[sub_resource type="Animation" id="Animation_nl12d"]
resource_name = "Attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeAnchor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeAnchor/MeleeSphere:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeAttackArea")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"activate"
}, {
"args": [],
"method": &"deactivate"
}]
}

[sub_resource type="Animation" id="Animation_pts2o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeAnchor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeAnchor/MeleeSphere:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xvsui"]
_data = {
"Attack": SubResource("Animation_nl12d"),
"RESET": SubResource("Animation_pts2o")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pcytg"]
radius = 0.721485
height = 2.65424

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_rvo1c")

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_5yey4")

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("3_qrkly")
invert_mouse_y = true
tilt_upper_limit = 0.48
tilt_lower_limit = -0.8

[node name="CameraOverShoulderPivot" type="Marker3D" parent="CameraController"]
transform = Transform3D(-1, -1.04414e-14, -8.74228e-08, -2.29301e-08, 0.964989, 0.26229, 8.4362e-08, 0.26229, -0.964989, -0.848491, 3.21385, -2.32639)

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(-1, -5.15034e-15, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, 0, 2.33984, 0)
collision_mask = 2
shape = SubResource("SeparationRayShape3D_gqx4v")
spring_length = 10.0

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraSpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(-1, -3.71248e-14, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, -8.74228e-07, 6.04006, -9.29023)
attributes = SubResource("CameraAttributesPractical_3ix22")
fov = 37.8493

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(0, 0, 0, 0)

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("CylinderShape3D_s5n07")
target_position = Vector3(0, -2, 0)

[node name="CharacterRotationRoot" type="Node3D" parent="."]

[node name="MeleeAnchor" type="Node3D" parent="CharacterRotationRoot"]

[node name="MeleeSphere" type="MeshInstance3D" parent="CharacterRotationRoot/MeleeAnchor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25195, 1.075, 0)
visible = false
mesh = SubResource("SphereMesh_uex0s")
skeleton = NodePath("../../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterRotationRoot/MeleeAnchor"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_xvsui")
}

[node name="MeleeAttackArea" type="Area3D" parent="CharacterRotationRoot"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.959482, 1.0525)
script = ExtResource("3_v1vve")

[node name="CollisionShape3d" type="CollisionShape3D" parent="CharacterRotationRoot/MeleeAttackArea"]
shape = SubResource("CapsuleShape3D_pcytg")
disabled = true

[node name="CharacterSkin" parent="CharacterRotationRoot" instance=ExtResource("4_ign62")]

[node name="AimRecticle" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.5
offset_top = -3.5
offset_right = 3.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.290196)
